<resources>
    <string name="app_name">IDeal</string>

    <string name="erreur_internet">Internet connexion needed to launch IDeal</string>
    <string name="erreur_reception">Reception error...</string>
    <string name="connecting">Connecting...</string>
    <string name="trying">Trying to connect...</string>
    <string name="access_err">You need to be connected</string>
    <string name="recharticles">Check the articles</string>
    <string name="search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="no_res">No result.</string>
    <string name="faved">Added as favorite</string>
    <string name="fav">Add this product as favorite</string>
    <string name="accsett">Account settings</string>
    <string name="lang">Language (actual is</string>
    <string name="fn">First Name</string>
    <string name="ln">Last Name</string>
    <string name="changlang"> Switch language to </string>
    <string name="cryptmeth">Encryption method : </string>
    <string name="register">Register</string>
    <string name="needlog">You need to be part of the community to add and manage your articles</string>
    <string name="invit">Hi, you are currently not logged.</string>
    <string-array name="cryptlist">
        <item>SHA1</item>
    </string-array>

    <!-- RGPD -->
    <string name="rgpd">General Data Protection Regulation (GDPR)</string>
    <string name="rgpdrules">
        The European Union’s General Data Protection Regulation (GDPR) protects European Union data subjects\' fundamental right to privacy and the protection of personal data. It introduces robust requirements that will raise and harmonize standards for data protection, security, and compliance.
    </string>
    <string name="acceptrgpd">
        I read and accept the conditions above
    </string>
    <string name="rgpd2">Therefore you need to know the following.

IDEAL can collect information when : \n

registering,
using the form,
adding likes or dislikes. \n
The stored data is the one you gave when filling in the forms.

By filling in and sending the forms available on IDEAL, you agree with the use of your personal data in treating your demand.

It is important to know that this data is only used by IDEAL and will never be given to anyone else.

You have the right to : \n

consult your personal data,
aks for an update of your personal data,
ask for the withdrawal of your personal data,
by sending an e-mail to the following address : nbaptista@myges.fr.</string>

    <!-- login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in !</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="back">Back</string>
    <string name="valid">Save</string>

    <!-- menu -->
    <string name="Trier_par_ordre_alphabetique">Sort by alphabetic order</string>
    <string name="Trier_par_prix">Sort by price</string>
    <string name="Trier_par_note">Sort by note</string>
    <string name="Trier_par_date">Sort by date</string>

    <string name="Votre_compte">Your account</string>
    <string name="nonco">You are not connected</string>
    <string name="con">Connected to IDeal Server</string>
    <string name="nonauth">You are not signed</string>
    <string name="auth">You are signed as</string>

    <string name="Mes_favoris">My favs</string>
    <string name="Mon_compte">My account</string>
    <string name="Nouveau_produit">New product</string>
    <string name="Mes_produits">My products</string>
    <string name="title_activity_adpage">Adpage</string>

    <string name="createacc">Create account</string>
    <string name="pass">New password</string>
    <string name="confirmpass">Confirm the password</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="desc">Description</string>
    <string name="favmerch">Favorite merchants</string>
    <string name="favarticle">Favorite articles</string>
    <string name="nbvote">Number of votes</string>
    <string name="logout">Logout</string>
    <string name="logout1">You have been disconnected successfully.</string>
    <string name="like">LIKE</string>
    <string name="unlike">UNLIKE</string>
    <string name="uppic">Load Picture</string>
    <string name="addedprod">Product added successfully</string>
    <string name="createdacc">Account created successfully</string>

    <string name="description">DESCRIPTION</string>
    <string name="prixx">PRICE</string>
    <string name="likes">LIKES</string>
    <string name="favoris">FAVORITES</string>

    <string name="voirles">SEE THE</string>
    <string name="autresarticles">OTHERS ARTICLES</string>

    <string name="nouveauproduits">Our products</string>
    <string name="nossuggestion">Our suggestions</string>
    <string name="lesplusrecents">The most recents</string>
    <string name="ordrealphabetique">Alphabetic order</string>
    <string name="lesmoinschers">The less expensive</string>

    <string name="fleche1txt">Or should you want to see our products</string>
    <string name="fleche2txt">Find the article you need</string>
    <string name="title_activity_article_viewer">ArticleViewer</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
